--- a/style.css
+++ b/style.css
@@ -1,7 +1,40 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
-.orange-color{
+h1 {
+    font-size: 45px;
+}
+
+.orange-color {
     color: orange;
+}
+
+section {
+    display: flex;
+}
+
+.half-width {
+    width: 50%;
+    padding-left: 5%;
+}
+
+.half-width img {
+    width: 80%;
+}
+
+.link-text {
+    text-decoration: none;
+    padding: 10px 40px;
+    background-image: linear-gradient(tomato, orange);
+    font-weight: 700;
+    color: white;
+    border-radius: 5px;
+}
+
+.top-banner {
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+
 }
