--- a/style.css
+++ b/style.css
@@ -7,11 +7,15 @@ h1 {
     font-size: 45px;
 }
 
+h2 {
+    font-size: 40px;
+}
+
 .orange-color {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 150px;
 }
@@ -49,4 +53,33 @@ section {
 
 .para {
     margin-bottom: 30px;
+}
+
+.box-sha {
+    box-shadow: 10px 10px 40px grey;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 30px;
+    padding-bottom: 60px;
+    border-radius: 2px;
+
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-position: left;
+    background-repeat: no-repeat;
+}
+
+#full-stack-developer {
+    border-left: 7px solid tomato;
+}
+
+#baby-developer {
+    border-left: 7px solid blue;
+}
+
+footer p {
+    text-align: center;
 }
